Bug Fix: Passion - Spacing issue

--- a/passion/css/tiles.dev.css
+++ b/passion/css/tiles.dev.css
@@ -197,7 +197,7 @@
   text-transform: capitalize;
   line-height: 0;
   color: transparent;
-  box-shadow: -1px 1px 2px #0003 3;
+  box-shadow: -1px 1px 2px #000000 3;
   -webkit-transition: all 0.2s linear;
   transition: all 0.2s linear;
   -webkit-transform: translate(75px, 0);
@@ -237,9 +237,6 @@
 }
 #passion.logged-in .module-hero-image {
   margin-top: 82px;
-}
-#passion div#main-content {
-  margin-top: 32px;
 }
 #passion div#main-content ul.grid {
   padding-left: 0;
@@ -290,7 +287,7 @@
   display: none;
 }
 #passion .row {
-  height: 100%;
+  height: auto;
   padding-left: 40px;
 }
 #passion .row h1:after {
@@ -339,11 +336,11 @@
   display: block;
 }
 #passion .module-hero-image {
-  margin-top: 50px;
-  height: 100%;
+  margin-top: 0;
+  height: auto;
   min-height: 1075px;
-  margin-bottom: calc(-242px);
-  padding-bottom: calc(242px);
+  margin-bottom: -210px;
+  padding-bottom: 260px;
 }
 #passion .module-hero-image.hide {
   display: none;
@@ -548,7 +545,7 @@
 }
 #passion .grid,
 #passion .search-grid {
-  background: url(../assets/stripes.svg) #E8E8E8;
+  background: url(../assets/stripes.svg) #e8e8e8;
 }
 #passion li.grid-item.search-more div,
 #passion li.grid-item.filter-item div {
@@ -1129,8 +1126,6 @@
   #passion .infographic {
     width: calc(100%);
   }
-}
-@media only screen and (max-width: 320px) {
 }
 #passion .grid-item.special {
   background-color: #4b2e83;
